--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,8 @@ a{
 
 .attribution{
 
-    font-size: 11px; text-align: center;
-
+    font-size: 11px;
+    text-align: center;
+    float: left;
+    
 }
